--- a/packages/gossip/pyproject.toml
+++ b/packages/gossip/pyproject.toml
@@ -3,6 +3,7 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
+requires-python = ">=3.10"
 name = "gossip"
 version = "0.1.0"
 description = "Gossip Protocol"
