--- a/packages/pdra/pyproject.toml
+++ b/packages/pdra/pyproject.toml
@@ -3,6 +3,7 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
+requires-python = ">=3.10"
 name = "pdra"
 version = "0.1.0"
 description = "Private Distributed Resource Allocation"
