1.为两个包的pyproject.toml添加了依赖项；2.不在总的pdra包里导出子模块，因为后续还会有benchmark里的两种方法。

--- a/packages/gossip/pyproject.toml
+++ b/packages/gossip/pyproject.toml
@@ -10,3 +10,7 @@ description = "Gossip Protocol"
 authors = [
     {name = "Rui Huang", email = "R.Huang@lboro.ac.uk"}
 ]
+
+dependencies = [
+    "numpy>=1.26.4",
+]
