--- a/packages/pdra/pyproject.toml
+++ b/packages/pdra/pyproject.toml
@@ -13,5 +13,5 @@ authors = [
 
 dependencies = [
     "cvxpy>=1.4.3",
-    "gossip>=0.1.0",
+    "gossip @ git+https://github.com/rui-huang-opt/gossip.git",
 ]
