--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ networkx==3.2.1
 numpy==1.26.4
 osqp==0.6.7.post3
 packaging==24.2
-pdra @ git+https://github.com/rui-huang-opt/pdra-core.git
+pdra @ git+https://github.com/rui-huang-opt/pdra.git
 pillow==11.1.0
 pybind11==2.13.6
 pyparsing==3.2.1
