--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,7 @@ requires-python = ">=3.10"
 name = "pdra"
 version = "0.1.0"
 description = "Private Distributed Resource Allocation"
-authors = [
-    {name = "Rui Huang", email = "R.Huang@lboro.ac.uk"}
-]
+authors = [{ name = "Rui Huang", email = "R.Huang@lboro.ac.uk" }]
 
 dependencies = [
     "cvxpy>=1.4.3",
@@ -17,11 +15,8 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-test = [
-    "matplotlib==3.7.4",
-    "networkx==3.4.2",
-    "toml==0.10.2",
-]
+test = ["matplotlib==3.7.4", "networkx==3.4.2", "toml==0.10.2"]
+exp = ["matplotlib==3.7.4", "networkx==3.4.2", "toml==0.10.2"]
 
 [tool.setuptools.packages.find]
 where = ["src"]
