将test里的文件都换成jupyter notebook。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-test = ["matplotlib==3.7.4", "networkx==3.4.2", "toml==0.10.2"]
+test = ["matplotlib==3.7.4", "networkx==3.4.2"]
 exp = ["matplotlib==3.7.4", "networkx==3.4.2", "toml==0.10.2"]
 
 [tool.setuptools.packages.find]
